2015-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (PictPixmapOp): Fix Coverity 55875 and 55883
	"Resource leak". 2nd try.

	* coders/pcx.c (WritePCXImage): Fix Coverity 55877 "Resource
	leak". 2nd try.

	* coders/meta.c (format8BIM): Fix Coverity 55842 "Resource
	leak". 2nd try.

	* coders/mat.c (WriteMATLABImage): Fix Coverity 55850 "Resource
	leak". 2nd try.

	* coders/dpx.c (ReadDPXImage): Fix Coverity 55878 "Resource leak".
	2nd try.

	* coders/preview.c (WritePreviewImage): Fix Coverity 55988
	"Resource leak".

2015-04-12  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Avoid some memory leaks
	newly reported by Coverity (work in progress)

2015-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (ScaleImage): Fix Coverity 55824 "Division or
	modulo by float zero".

	* magick/annotate.c (AnnotateImage): Fix Coverity 55863
	"Uninitialized scalar variable".

	* wand/magick_wand.c (MagickDrawImage): Fix Coverity 55828
	"Resource leak".
	(MagickMontageImage): Fix Coverity 55835 "Resource leak".

	* wand/drawing_wand.c (DrawComposite): Fix Coverity 55849
	"Resource leak".

	* magick/widget.c (MagickXColorBrowserWidget): Fix Coverity 55854
	"Resource leak".

	* magick/resize.c (ScaleImage): Fix Coverity 55841, 55853, 55858,
	and 55860 "Resource leak".

	* magick/render.c (ConvertPathToPolygon): Fix Coverity 55836
	"Resource leak".
	(DrawDashPolygon): Fix Coverity 55837 "Resource leak".

	* magick/quantize.c (GrayscalePseudoClassImage): Fix Coverity
	55831 "Resource leak".

	* magick/paint.c (ColorFloodfillImage): Fix Coverity 55886
	"Resource leak".

	* magick/map.c (MagickMapAddEntry): Possibly silence 55844
	"Resource leak".

	* magick/image.c (CloneImage): Fix Coverity 55833 "Resource leak".

	* magick/effect.c (BlurImage): Fix Coverity 55851 "Resource leak".

	* magick/display.c (MagickXAnnotateEditImage): Fix Coverity 55830
	"Resource leak".